--- a/css/styles.css
+++ b/css/styles.css
@@ -9,20 +9,32 @@
  	height: 100%;
  	width: 100%;
  }
+ 
 body {
-font-size: 0px;
+  font-size: 0px;
 }
- .tabs {
- display: inline-block;
- font-size: 100px;
- height: 20%;
- width: 50%;
- border: 0 transparent;
- padding: 0;
+
+.tabs {
+  display: inline-block;
+  font-size: 100px;
+  height: 20%;
+  width: 50%;
+  border: 0 transparent;
+  padding: 0;
+}
+
+ /* edited by ignorantic */
+.magnifier {
+  width: 110px;
+  outline: none;
+  border: 0;
+  background-color: transparent;
+  background-image: url("../img/magnifier.svg");
+  background-repeat: no-repeat;
+  background-size: 60%;
+  background-position: center;
  }
- .magnifier {
- 	background-image: url("img/magnifier.svg");
- }
+ /* end of // edited by ignorantic */
  div {
  	display: inline-block;
  	width: 30%;
@@ -52,4 +64,12 @@ div ul li:hover {
 }
 h2 {
 	padding-left: 40px; 
+}
+
+
+/* added by ignorantic */
+.people li a img,
+.people li a span {
+  display: inline-block;
+  vertical-align: middle;
 }
